@@ -6,7 +6,7 @@ pkgbase="openoffice-base"
 pkgname=('openoffice-base' 'openoffice-sdk')
 _OO_milestone=OOO320_m19
 pkgver=3.2.1 # m18/m19=3.2.1 RC2 = final
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('LGPL3')
 url="http://www.openoffice.org"
@@ -16,7 +16,7 @@ makedepends=(# the real makedeps
              'apache-ant>=1.8.0' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=6.b17_1.8"
 	     'beanshell' 'vigra' 'libmspack' 'libldap' 'lucene'  'libmythes'
 	     # from main OOo the deps
-	     "curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6"
+	     "curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd' 'libxaw' "neon>=0.28.6"
 	     'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 'libxslt'
 	     'redland' 'libgraphite' 'hyphen' 'lpsolve'
 	     'hicolor-icon-theme' 'desktop-file-utils' 'gtk2')
@@ -32,7 +32,7 @@ source=(ftp://ftp.archlinux.org/other/openoffice/${_OO_milestone}.tar.xz
 	buildfix_system_db48.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/cppu-lbnames-enable-gcc-4.5.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/vcl-system-graphite-with-stlport.diff
-	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/fix-system-mythes-for-mythes-1.2.diff
+	http://cgit.freedesktop.org/libreoffice/build/plain/patches/dev300/fix-system-mythes-for-mythes-1.2.diff?h=ooo-build-3-2-1
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/redland-remove-patches.diff?h=ooo-build-3-2-1
 	openoffice.profile)
 options=('!distcc' '!ccache' '!makeflags')
@@ -47,7 +47,7 @@ md5sums=('74d11db8100701bd08c97e93f12da021'
          '0cd6f3525939d3ef6e5a30ad30c25d27'
          'e666e8cea0ef557a8bce41c58dd16408'
          'c6abfe517a7002a18880e0e209145167'
-         'a5fa37b6de885d539b8c8281832534e6'
+         '4798e0d5329cd11f4c7c303ad5d0ff6f'
          '754c85fdd5bb122396e6989a9b403f48'
          '2e8c89d4bfda9b5ccd3b118c87eff62a')
 
@@ -85,7 +85,7 @@ build() {
 	patch -Np0 -i ${srcdir}/cppu-lbnames-enable-gcc-4.5.diff || return 1
 
 	# allow build with system mythes
-	patch -Np0 -i ${srcdir}/fix-system-mythes-for-mythes-1.2.diff || return 1
+	patch -Np0 -i ${srcdir}/fix-system-mythes-for-mythes-1.2.diff?h=ooo-build-3-2-1 || return 1
 	# allow build with system redland and cppunit
 	# should also workaround all known bugs with plain upstream redland
 	patch -Np0 -i ${srcdir}/redland-remove-patches.diff?h=ooo-build-3-2-1 || return 1	
@@ -125,6 +125,9 @@ build() {
 	# Need to recreate the configure script because of patches
 	autoreconf -v || return 1
 
+	# python2 fix
+	sed -i -e "s:for am_cv_pathless_PYTHON in python:for am_cv_pathless_PYTHON in python2.7:" configure
+	
 	./configure --with-build-version="${pkgver} ArchLinux build-${pkgrel} (${_OO_milestone})" \
 	--with-vendor="ArchLinux"\
 	--prefix=/usr --exec-prefix=/usr\
@@ -206,7 +209,7 @@ package_openoffice-base() {
 
  pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
  install=openoffice.install
- depends=("curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6"
+ depends=("curl>=7.20.0" "hunspell>=1.2.8" "python2>=2.7" 'libwpd' 'libxaw' "neon>=0.28.6"
           'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 'libxslt'
 	  'redland' 'libgraphite' 'hyphen' 'lpsolve'
 	  'hicolor-icon-theme' 'desktop-file-utils' 'gtk2') # keep gtk2 for install script
