@@ -1,3 +1,8 @@
+2010-10-04 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1-2 :
+	- python2 - 2.7 rebuild
+
 2010-06-01 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1-1 :
